--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4"
+tokio = { version = "1", features = ["time", "rt-multi-thread"] }
