--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ name = "workguard_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2" }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = ["tray-icon"] }
@@ -20,3 +20,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4"
 tokio = { version = "1", features = ["time", "rt-multi-thread"] }
+image = "0.25.6"
