--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ serde_json = "1"
 chrono = "0.4"
 tokio = { version = "1", features = ["time", "rt-multi-thread"] }
 image = "0.25.6"
+tauri-plugin-notification = "2.3.3"
