--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["time", "rt-multi-thread"] }
 image = "0.25.6"
 tauri-plugin-notification = "2.3.3"
